2008-02-29  Alan D. Salewski  <ASalewski@signatureinfo.com>

	* configure.ac (AC_CONFIG_FILES): Added to list:
	  src/main/perl/bin/Makefile
	(ads_PROG_PERL): require Perl 5.8.0 (prev. only req'd 5.005)
	* README: Documented newer perl deb on 5.8.x

	* src/main/perl/Makefile.am (SUBDIRS): Added 'bin' to list
	* src/main/perl/bin/bedrock-create-site.in: new file
	* src/main/perl/bin/Makefile.am: new file

	* configure.ac (AC_CONFIG_FILES): Added to list:
	  src/main/bedrock/Makefile
	  src/main/bedrock/pebbles/Makefile
	* src/main/Makefile.am (SUBDIRS): Added 'bedrock' to list
	* src/main/bedrock/Makefile.am: new file
	* src/main/bedrock/pebbles/Makefile.am: new file

	* src/main/resources/htdocs/Makefile.am: new file
	* src/main/resources/Makefile.am (SUBDIRS): Added 'htdocs' to list
	* configure.ac (AC_CONFIG_FILES): Added to list:
	  src/main/resources/htdocs/Makefile

2008-02-28  Alan D. Salewski  <ASalewski@signatureinfo.com>

	* src/main/resources/htdocs/error.roc: new file (originally from
	  the bedrock 1.6.4 tarball)

	Autoconfiscation:
	* AUTHORS: new file
	* BUGS: new file
	* COPYING: new file
	* HACKING: new file
	* INSTALL: new file
	* README: new file
	* bootstrap: new file
	* configure.ac: new file
	* Makefile.am: new file
	* autotools/ads_PERL_MODULE.m4: new file
	* autotools/missing: new file
	* autotools/install-sh: new file
	* autotools/ads_PERL_LIBDIR.m4: new file
	* autotools/ads_PERL_INCLUDES.m4: new file
	* autotools/ads_PROG_PERL.m4: new file
	* bin/Makefile.am: new file
	* bin/splice-in-file: new file
	* src/Makefile.am: new file
	* src/main/Makefile.am: new file
	* src/main/perl/Makefile.am: new file
	* src/main/perl/cgi-bin/Makefile.am: new file
	* src/main/perl/cgi-bin/bedrock.cgi.in: new file (replaces
	  bedrock.cgi, which we now generate at build time)
	* src/main/perl/lib/Makefile.am: new file
	* src/main/resources/Makefile.am: new file
	* src/main/resources/bedrock-perl5-inc-begin-block.snippet.in: new file
