@@ -967,6 +967,17 @@ at the first error that is encountered.
 We currently check for the existence of the C<$sitedir/htdocs/admin/cgi-bin>
 symlink, but we do not check that the target of that link is sane.
 
+=item *
+
+The C<bedrock-create-site> program is a big honkin' all-or-nothing program;
+there is no provision for accessing parts of the available functionality
+without taking all of the funtionality. For instance, it is conceivable that
+a user would want to create an Apache config file snippet without creating
+the site directory structure. We may want to consider breaking out the major
+pieces of functionality into separate programs that can be invoked to
+achieve specific tasks, and have C<bedrock-create-site> invoke those
+programs.
+
 =back
 
 If you find any others, please report them to the Signature Inforamation
