@@ -1,3 +1,8 @@
+2008-03-01  Alan D. Salewski  <ASalewski@signatureinfo.com>
+
+	* src/main/perl/bin/bedrock-create-site.in
+	(BUGS): Noted idea for potential redesign
+
 2008-02-29  Alan D. Salewski  <ASalewski@signatureinfo.com>
 
 	* configure.ac (AC_CONFIG_FILES): Added to list:
